plugins/env-files-support/tests/testResources/ru/adelf/idea/dotenv/tests/dotenv/fixtures/nestedVariableOutsideDoubleQuotesInspection.env
KEY=<error descr="Nested variables must not appear outside double quotes">${VALUE}</error>
KEY=<error descr="Nested variables must not appear outside double quotes">${VALUE}suffix</error>
KEY=<error descr="Nested variables must not appear outside double quotes">prefix${VALUE}suffix</error>
KEY=<error descr="Nested variables must not appear outside double quotes">prefix${VALUE}</error>
KEY="prefix${VALUE}suffix"
KEY=
KEY=""
